pkg/tests/testthat/errors/test_params1.R
library(isismdl)
library(testthat)

#cmpmdl("../mdl/params1");
